syntax = "proto3";

import "google/protobuf/any.proto";

package raiprojectcom.docker;


message DockerBuildRequest {
  string content = 1;
}

message DockerBuildResponse {
  string content = 1;
  ErrorStatus error = 2;
}

message ErrorStatus {
  string message = 1;
  repeated google.protobuf.Any details = 2;
}

service DockerService {
  rpc Build(DockerBuildRequest) returns (DockerBuildResponse) {}
}
